--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3>Services</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          <h3>What We Do ?</h3>
+          <br>
         </header>
 
         <div class="row justify-content-center">
@@ -187,45 +187,45 @@
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">Software Development</a></h4>
+              <p class="description">We offer a complete range of software development services for each and every field of activity. Whether you are a startup or an established business. We are here to help you find solutions at every step of your software development process.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="bi bi-card-checklist" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href="">Web Development</a></h4>
+              <p class="description">We build professional and affordable web design services with reliable support & provides a complete web development solutions all under one roof for your dream website. We are providing custom web design solutions.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <div class="icon"><i class="bi bi-bar-chart" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4 class="title"><a href="">Mobile Development</a></h4>
+              <p class="description">Mobile apps is the heart of Mobile phones! Are you seeking expert mobile app developers from India?Are you searching for one of the best mobile application development companies in India for all your mobile solutions?We're on your side.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="bi bi-binoculars" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">Software Testing</a></h4>
+              <p class="description">Bluon Tech has well-trained and highly experienced testers that can help streamline your QA process and assist your team. We have utilized the best testing tools and state-of-the-art technology to provide highly efficient application testing services.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <div class="icon"><i class="bi bi-brightness-high" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">BPO</a></h4>
+              <p class="description">As we have an acclaimed reputation of being the top-notch business outsourcing partner in the global industry, we are well-known for delivering the first-class services.  </p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="bi bi-calendar4-week" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href="">Training</a></h4>
+              <p class="description">Bluon Tech is proven expertise in Software Development and Training, IT Staffing, comprehensive remote infrastructure management and application management</p>
             </div>
           </div>
 
@@ -239,7 +239,7 @@
       <div class="container" data-aos="fade-up">
         <header class="section-header">
           <h3>Why choose us?</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          <p>It’s not about ideas. It’s about making ideas happen. We make it happen for you!</p>
         </header>
 
         <div class="row row-eq-height justify-content-center">
@@ -282,12 +282,12 @@
         <div class="row counters" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
             <p>Clients</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="421" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="60" data-purecounter-duration="1" class="purecounter"></span>
             <p>Projects</p>
           </div>
 
@@ -702,23 +702,22 @@
 
           <div class="col-lg-6">
             <div class="map mb-4 mb-lg-0">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 340px;" allowfullscreen></iframe>
-            </div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3938.785297676563!2d77.86031221464485!3d9.173830689230009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06b3048c57fc5b%3A0x610c69a7128291bd!2sBluon%20Tech!5e0!3m2!1sen!2sin!4v1656407016535!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
           </div>
 
           <div class="col-lg-6">
             <div class="row">
               <div class="col-md-5 info">
                 <i class="bi bi-geo-alt"></i>
-                <p>A108 Adam Street, NY 535022</p>
+                <p>483, Main Road, Kovilpatti.</p>
               </div>
               <div class="col-md-4 info">
                 <i class="bi bi-envelope"></i>
-                <p>info@example.com</p>
+                <p>bluontech@gmail.com</p>
               </div>
               <div class="col-md-3 info">
                 <i class="bi bi-phone"></i>
-                <p>+1 5589 55488 55</p>
+                <p>+91 87548 01550</p>
               </div>
             </div>
 
@@ -780,11 +779,12 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              483,Main Road <br>
+              Near Micropoint Computer Education<br>
+              Kovilpatti - 628502 <br>
+              Tamil Nadu, India <br>
+              <strong>Phone:</strong> +91 87548 01550<br>
+              <strong>Email:</strong> bluontech@gmail.com<br>
             </p>
 
             <div class="social-links">
