--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
       </div>
 
       <div class="hero-info" data-aos="zoom-in" data-aos-delay="100">
-        <h2 style="font-family: iceland;font-size: 500%;">Welcome To<br>Bluon Tech</h2>
-          <p style="color:whitesmoke;">Connecting IT Together... </p><br>
+        <h2>Welcome To<br>Bluon Tech</h2>
+          <p style="color:whitesmoke;">Connecting Through Technology </p><br>
         <div>
           <a href="#about" class="btn-get-started scrollto">Get Started</a>
           <a href="#services" class="btn-services scrollto">Our Services</a>
@@ -832,16 +832,14 @@
               Near Micropoint Computer Education<br>
               Kovilpatti - 628502 <br>
               Tamil Nadu, India <br>
-              <strong>Phone:</strong> <a href="tel:+918754801550">+91 87548 01550</a> <br>
-              <strong>Email:</strong> <a href="mailto:bluontech@gmail.com">bluontech@gmail.com</a> <br>
+              <strong>Phone :</strong> <a href="tel:+918754801550">+91 87548 01550</a> <br>
+              <strong>Email :</strong> <a href="mailto:bluontech@gmail.com">bluontech@gmail.com</a> <br>
             </p>
 
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=100089313514513" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="https://instagram.com/bluon_tech?igshid=YmMyMTA2M2Y=" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.linkedin.com/company/bluon-tech/?viewAsMember=true" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
 
           </div>
@@ -849,7 +847,7 @@
           <div class="col-lg-3 col-md-6 footer-newsletter">
             <div class="col-lg-6">
               <div class="map mb-6 mb-lg-0">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3938.785297676563!2d77.86031221464485!3d9.173830689230009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06b3048c57fc5b%3A0x610c69a7128291bd!2sBluon%20Tech!5e0!3m2!1sen!2sin!4v1656407016535!5m2!1sen!2sin" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3938.785297676563!2d77.86031221464485!3d9.173830689230009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06b3048c57fc5b%3A0x610c69a7128291bd!2sBluon%20Tech!5e0!3m2!1sen!2sin!4v1656407016535!5m2!1sen!2sin" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
             </div>
   
           </div>
