--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
               Kovilpatti - 628502 <br>
               Tamil Nadu, India <br>
               <strong>Phone :</strong> <a href="tel:+918754801550">+91 87548 01550</a> <br>
-              <strong>Email :</strong> <a href="mailto:bluontech@gmail.com">bluontech@gmail.com</a> <br>
+              <strong>Email :</strong> <a href="mailto:admin@bluontech.com">bluontech@gmail.com</a> <br>
             </p>
 
             <div class="social-links">
