--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <!--
+          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -315,7 +316,7 @@
       </div>
     </section><!-- End Why Us Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Portfolio Section ======= 
     <section id="portfolio" class="clearfix">
       <div class="container" data-aos="fade-up">
 
@@ -331,7 +332,7 @@
               <li data-filter=".filter-card">Office</li>
               <!--
               <li data-filter=".filter-web">Web</li>
-              -->
+             
             </ul>
           </div>
         </div>
@@ -347,7 +348,7 @@
                 <p>Mr.J.Armstrong <br>Founder, Micropoint Institution</p>
                 <div>
                   <a href="assets/img/portfolio/app1.jpg" data-gallery="portfolioGallery" title="Welcome Address" class="portfolio-lightbox link-preview"><i class="bi bi-plus"></i></a>
-                  <!-- <a href="portfolio-details.html" class="link-details" title="More Details"></a>-->
+                  <!-- <a href="portfolio-details.html" class="link-details" title="More Details"></a>
                 </div>
               </div>
             </div>
@@ -368,7 +369,6 @@
               </div>
             </div>
           </div>
-        -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -379,7 +379,7 @@
                 <p>Mr.A.Rojar Afrin is honoring chief guest Rt.Rev.Dr.S.E.C.Devasahayam</p>
                 <div>
                   <a href="assets/img/portfolio/app2.jpg" class="portfolio-lightbox link-preview" data-gallery="portfolioGallery" title="Honoring Chief Guest"><i class="bi bi-plus"></i></a>
-                  <!-- <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a> -->
+                  <!-- <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a> 
                 </div>
               </div>
             </div>
@@ -413,7 +413,6 @@
               </div>
             </div>
           </div>
-          -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -424,7 +423,7 @@
                 <p>Rt.Rev.Dr.S.E.C.Devasahayam<br>Bishop, Tuticorin Nazereth Diocese</p>
                 <div>
                   <a href="assets/img/portfolio/app3.jpg" class="portfolio-lightbox link-preview" data-gallery="portfolioGallery" title="Inauguration"><i class="bi bi-plus"></i></a>
-                  <!-- <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a> -->
+                  <!-- <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a> 
                 </div>
               </div>
             </div>
@@ -438,7 +437,7 @@
                 <p>Working Space</p>
                 <div>
                   <a href="assets/img/portfolio/card1.jpg" class="portfolio-lightbox link-preview" data-gallery="portfolioGallery" title="Working Space"><i class="bi bi-plus"></i></a>
-                  <!-- <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a> -->
+                  <!-- <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a> 
                 </div>
               </div>
             </div>
@@ -452,7 +451,7 @@
                 <p>Working Space</p>
                 <div>
                   <a href="assets/img/portfolio/card3.jpg" class="portfolio-lightbox link-preview" data-gallery="portfolioGallery" title="Working Space"><i class="bi bi-plus"></i></a>
-                  <!-- <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a> -->
+                  <!-- <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a> 
                 </div>
               </div>
             </div>
@@ -472,12 +471,11 @@
               </div>
             </div>
           </div>
-          -->
 
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section> End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <!--
