Update Contact Email Details

--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
               Kovilpatti - 628502 <br>
               Tamil Nadu, India <br>
               <strong>Phone :</strong> <a href="tel:+918754801550">+91 87548 01550</a> <br>
-              <strong>Email :</strong> <a href="mailto:admin@bluontech.com">admin@bluontech.com</a> <br>
+              <strong>Email :</strong> <a href="mailto:contact@bluontech.com">contact@bluontech.com</a> <br>
             </p>
 
             <div class="social-links">
