Remove Section above footer

--- a/index.html
+++ b/index.html
@@ -794,14 +794,14 @@
         </div>
 
       </div>
-    </section>
+    </section>  <section id="contact"></section>
      -->
     <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <section id="contact"></section>
+
   <footer id="footer">
     <div class="footer-top">
       <div class="container">
